--- a/Rachel/templates/mortgage.html
+++ b/Rachel/templates/mortgage.html
@@ -13,49 +13,46 @@
           <h1 style="color: ivory;">Mortgage Calculator</h1>
           <p style="color: ivory;"></p>
         </div>
-      </div>
-    
-<div class = "grid-container">   
-<div class = "grid-child search">
-<form id = "form">
-  <label for="HomePrice">Home Price:</label><br>
-  <input type="text" id="HomePrice" name="HomePrice" value="" placeholder="150000"><br>
-  <label for="DownPayment">Down Payment:</label><br>
-  <input type="text" id="DownPayment" name="DownPayment" value="" placeholder="12000"><br>
-  <label for="Interest">Interest Rate: %</label><br>
-  <input type="text" id="Interest" name="Interest" value="" placeholder="3.5" ><br>
-  <label for="PropertyTax">Yearly Property Tax Rate: (%)</label><br>
-  <input type="text" id="PropertyTax" name="PropertyTax" value="" placeholder="1.1" style="width: 200px;"><br>
-  <label for="HomeInsurance">Yearly Homeowner's Insurance</label><br>
-  <input type="text" id="HomeInsurance" name="HomeInsurance" value="" placeholder="1200" style="width: 200px;"><br>
-</form>
-<div id = "dropdown">
-  <label for = "SelectTerm">Mortgage Period (years)</label><br>
-  <select id="SelectTerm" onchange= "formatOption()" style="width: 200px;">
-    <option value = "10">10 Year-Fixed</option>
-    <option value = "15">15 Year-Fixed</option>
-    <option value = "20">20 Year-Fixed</option>
-    <option value = "30">30 Year-Fixed</option>
-  </select>
-</div>
-<br><br><br><br>
-  <div id = 'calculate_button'>  
-    <button id = "MortgageCalc_Button" value = "Calculate" onclick="MortgageCalculator()">Calculate</button><br>
-  </div> 
-</div>
-<br>
-<div class = "grid-child graph">
-  <div id = "graph">
-    <p>Graph Goes Here</p>
-  </div>
-  <div id = "PieGraph" class="row"> 
-    <div class="col-md-12">
-      <div id="piechart"  style="height: 400px;"></div>
     </div>
-  </div>
+  
+    <div class="row">
+      <div class="col-md-4">
+        <div class="well">    
+          <form id = "form">
+            <label for="HomePrice">Home Price:</label><br>
+            <input type="text" id="HomePrice" name="HomePrice" value="" placeholder="150000"><br>
+            <label for="DownPayment">Down Payment:</label><br>
+            <input type="text" id="DownPayment" name="DownPayment" value="" placeholder="12000"><br>
+            <label for="Interest">Interest Rate: %</label><br>
+            <input type="text" id="Interest" name="Interest" value="" placeholder="3.5" ><br>
+            <label for="PropertyTax">Yearly Property Tax Rate: (%)</label><br>
+            <input type="text" id="PropertyTax" name="PropertyTax" value="" placeholder="1.1" style="width: 200px;"><br>
+            <label for="HomeInsurance">Yearly Homeowner's Insurance</label><br>
+            <input type="text" id="HomeInsurance" name="HomeInsurance" value="" placeholder="1200" style="width: 200px;"><br>
+          </form>
+          <div id = "dropdown">
+            <label for = "SelectTerm">Mortgage Period (years)</label><br>
+            <select id="SelectTerm" onchange= "formatOption()" style="width: 200px;">
+            <option value = "10">10 Year-Fixed</option>
+            <option value = "15">15 Year-Fixed</option>
+            <option value = "20">20 Year-Fixed</option>
+            <option value = "30">30 Year-Fixed</option>
+            </select>
+          </div>
+          <br><br><br><br>
+          <div id = 'calculate_button'>  
+            <button id = "MortgageCalc_Button" value = "Calculate" onclick="MortgageCalculator()">Calculate</button><br>
+          </div>
+        </div>
+      </div>
+     
+      <div class="col-md-8">
+        <div class="well">   
+            <div id="piechart"  style="height: 400px;">Monthly Payment Breakdown</div>
+        </div>
+      </div>
+    </div>
 
-</div>
-</div>
 <h2 id = "Monthly_Mortgage"></h2>
 
 
