--- a/templates/calculation.html
+++ b/templates/calculation.html
@@ -66,7 +66,7 @@
     
                     </div>
             <!-- </div> -->
-                <div class="col-md-4">
+                <div class="col-md-4" style="margin: auto;">
                     <!-- <div class="well"> -->
                         <button id = "Rent_Button" value = "Open Window" onclick="window.open('https:www.zillow.com/homes/for_rent/')">
                         <img src="https://tse1.mm.bing.net/th?id=OIP.oI9iu8HvlnQNMjOaA2FScQHaGq&pid=Api&P=0&w=205&h=186" alt="Zillow" width="100" height="100"><br>
