Finished Page inserts

--- a/templates/Amenities.html
+++ b/templates/Amenities.html
@@ -33,8 +33,8 @@
    crossorigin=""/>
   
 </head>
-<body>
-  <div class="topnav">
+<body  >
+  <div id="Surprise" class="topnav">
     <a class="active" href="/">Home</a>
     <a href="/calculation">Investment Calculator</a>
     <a href="/amenity">Amenities</a>
